Fix problem with config example code

--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -1655,18 +1655,20 @@ from flask import Flask
 
 app = Flask(__name__)
 
+
 @app.route('/')
 def root():
   return "Hello Napier from the configuration testing app"
 
 @app.route('/config/')
 def config():
-  str = []
-  str.append('Debug:'+app.config['DEBUG'])
-  str.append('port:'+app.config['port'])
-  str.append('url:'+app.config['url'])
-  str.append('ip_address:'+app.config['ip_address'])
-  return '\t'.join(str)
+  s = []
+  s.append('debug:'+app.config['DEBUG'])
+  s.append('port:'+app.config['port'])
+  s.append('url:'+app.config['url'])
+  s.append('ip_address:'+app.config['ip_address'])
+  return ', '.join(s)
+
 
 def init(app):
     config = ConfigParser.ConfigParser()
